--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+ 
   </head>
-  <body>
+
+  <body style="background-color:lightgray">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
