--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
  
   </head>
 
-  <body style="background-color:lightgray">
+  <body style="background-color:rgba(255, 255, 255, 0.233)">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
